syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message AddBefore {

  int32 a = 1;

}
