syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message EvolutionWrongAfter {

  int32  a = 1;
  string b = 2;

}
