syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message OptionalOnly {

  int32 a = 1;

}
