syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message RenameAccidentalAfter {

  int32 b = 1;
  int32 a = 2;

}
