syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message RenameAccidentalBefore {

  int32 a = 1;
  int32 b = 2;

}
