syntax = "proto3";

package com.streese.lab.scala.playground.proto.models;

message RenameAfter {

  int32 a = 1;
  int32 c = 2;

}
